--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-image-magnify": "^2.7.4",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
